:bug: full height overflow text

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -9,13 +9,15 @@ body {
   height: 100vh;
   background-color: #FFF;
   font-family: 'Raleway', sans-serif;
-  overflow-y: hidden;
   font-size: 22px;
+  height: 100%;
 }
+
 div:focus{
   border: none;
   outline: none;
 }
+
 h2 {
   margin: 0;
   font-size: 2.25rem;
@@ -34,7 +36,8 @@ li {
 a {
   opacity: .75;
   text-decoration: none;
-  color: #61b392;
+  color: #2377bf;
+  text-decoration: underline;
 }
 
 a:hover {
